--- a/applications/xihe-test-v2/message-server/configmap.yaml
+++ b/applications/xihe-test-v2/message-server/configmap.yaml
@@ -165,12 +165,12 @@ data:
       related_resource: "xihe_related_resource_test"
       async: "xihe_async_test"
       signin: "xihe_sign_in_test"
-      bigmodel_started: "xihe_bigmodel_started_test"
       bigmodel_topics:
         inference_start: "xihe_inference_start_test"
         inference_error: "xihe_inference_error_test"
         inference_async_start: "xihe_inference_async_start_test"
         inference_async_finish: "xihe_inference_async_finish_test"
+        bigmodel_finished: "xihe_bigmodel_finished_test"
       picture_publicized: "xihe_picture_publicized_test"
       picture_liked: "xihe_picture_liked_test"
       competitor_applied: "xihe_competitor_applied_test"
