update glm endpoint for async-server

--- a/applications/xihe-test-v2/async-server/deployment.yaml
+++ b/applications/xihe-test-v2/async-server/deployment.yaml
@@ -241,6 +241,11 @@ spec:
             secretKeyRef:
               key: BIGMODEL_BAICHUAN
               name: xihe-secret
+        - name: BIGMODEL_GLM
+          valueFrom:
+            secretKeyRef:
+              key: BIGMODEL_GLM
+              name: xihe-secret
         - name: REDIS_ADDRESS
           valueFrom:
             secretKeyRef:
