--- a/applications/xihe-test-v2/async-server/configmap.yaml
+++ b/applications/xihe-test-v2/async-server/configmap.yaml
@@ -43,6 +43,7 @@ data:
         ai_detector: "${BIGMODEL_AI_DETECTOR}"
         wukong_user: "${BIGMODEL_WUKONG_USER}"
         baichuan: "${BIGMODEL_BAICHUAN}"
+        glm: "${BIGMODEL_GLM}"
 
       obs:
         endpoint: "${VQA_OBS_ENDPOINT}"
