--- a/applications/xihe-new/xihe-server/configmap.yaml
+++ b/applications/xihe-new/xihe-server/configmap.yaml
@@ -18,7 +18,7 @@ data:
       collections:
         project: project
         model: model
-        dataset: dataset 
+        dataset: dataset
         user: user
         registration: registration
         login: login
@@ -44,6 +44,8 @@ data:
         cloud_conf: cloud_conf
         api_apply: api_apply
         api_info: api_info
+        points_task: points_task
+        user_points: user_points
 
     gitlab:
       endpoint: "${GITLAB_ENDPOINT}"
@@ -156,6 +158,32 @@ data:
         secret_key: "${WUKONG_OBS_SECRET_KEY}"
         bucket: "${WUKONG_OBS_BUCKET}"
 
+      message:
+        inference_start:
+          name: "inference_start"
+          topic: "xihe_inference_start_new"
+        inference_error:
+          name: "inference_error"
+          topic: "xihe_inference_error_new"
+        inference_async_start:
+          name: "inference_async_start"
+          topic: "xihe_inference_async_start_new"
+        inference_async_finish:
+          name: "try_modelzoo"
+          topic: "xihe_inference_async_finish_new"
+        picture_publicized:
+          name: "publicize_wukong_picture"
+          topic: "xihe_picture_publicized_new"
+        picture_liked:
+          name: "like_ai_picture"
+          topic: "xihe_picture_liked_new"
+        bigmodel_started:
+          name: "start_modelzoo"
+          topic: "xihe_bigmodel_started_new"
+        bigmodel_finished:
+          name: "try_modelzoo"
+          topic: "xihe_bigmodel_finished_new"
+
     domain:
       min_name_length: 3
       max_name_length: 35
@@ -264,6 +292,10 @@ data:
       - "Abnormal"
       - "Completed"
       - "Terminated"
+      message:
+        training_created:
+          name: "train"
+          topic: "xihe_training_created_new"
 
     finetune:
       endpoint: "${FINETUNE_ENDPOINT}"
@@ -284,6 +316,19 @@ data:
         secret_key: "${HW_OBS_SK}"
         bucket: "${HW_OBS_BUCKET}"
         prefix: "competition"
+      message:
+        work_submitted:
+          name: "work_submitted"
+          topic: "xihe_work_submitted_new"
+        competitor_applied:
+          name: "apply_competition"
+          topic: "xihe_competitor_applied_new"
+
+    course:
+      message:
+        course_applied:
+          name: "apply_course"
+          topic: "xihe_course_applied_new"
 
     challenge:
       Competition_success_score: 100
@@ -311,13 +356,92 @@ data:
         pwd: "${PGSQL_PWD}"
         name: "${PGSQL_NAME}"
         port: ${PGSQL_PORT}
-        life: 
-      table:
-        pod: pod
-        async_task: async_task
-    
+        life:
+      cloud:
+        table:
+          pod: "pod"
+      async:
+        table:
+          async_task: async_task
+
     redis:
       db:
         address: "${REDIS_ADDRESS}"
         password: "${REDIS_PASSWORD}"
         key_pair: "${KEY_PAIR}"
+
+    cloud:
+      jupyter_created:
+        name: "start_jupyter"
+        topic: "xihe_jupyter_created_new"
+
+    points:
+      domain:
+        max_points_of_day: 50
+      repo:
+        keep: 30
+      task_doc:
+        templates:
+        - language: Chinese
+          file: /opt/app/points/task-docs-templates/doc_chinese.tmpl
+        - language: English
+          file: /opt/app/points/task-docs-templates/doc_english.tmpl
+
+    download:
+      model_download:
+        name: "download_model"
+        topic: "xihe_download_model_new"
+      dataset_download:
+        name: "download_dataset"
+        topic: "xihe_download_dataset_new"
+      project_download:
+        name: "download_project"
+        topic: "xihe_download_project_new"
+
+    resource:
+      related_resource: "xihe_related_resource_new"
+      fork: "xihe_fork_new"
+      project_created:
+        name: "create_project"
+        topic: "xihe_create_project_new"
+      model_created:
+        name: "create_model"
+        topic: "xihe_create_model_new"
+      dataset_created:
+        name: "create_dataset"
+        topic: "xihe_create_dataset_new"
+
+    sign_in:
+      user_signedin:
+        name: "sign_in"
+        topic: "xihe_sign_in_new"
+
+    user:
+      message:
+        bio_set:
+          name: "set_bio"
+          topic: "xihe_set_bio_new"
+        avatar_set:
+          name: "set_avatar"
+          topic: "xihe_set_avatar_new"
+        operate_log: "xihe_operate_log_new"
+        user_signedup:
+          name: "sign_up"
+          topic: "xihe_sign_up_new"
+        following_added:
+          name: "sign_up"
+          topic: "xihe_following_add_new"
+        following_removed:
+          name: "sign_up"
+          topic: "xihe_following_remove_new"
+
+    like:
+      model_liked:
+        name: "like_model"
+        topic: "xihe_like_model_new"
+      dataset_liked:
+        name: "like_dataset"
+        topic: "xihe_like_dataset_new"
+      project_liked:
+        name: "like_project"
+        topic: "xihe_like_project_new"
