--- a/applications/website/kustomization.yaml
+++ b/applications/website/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
+- name: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-website-api
+  newTag: master-53264e
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/website-backend
   newTag: master-a29759
 namespace: website
