add new endpoints for bigmodel

--- a/applications/xihe-new/secret.yaml
+++ b/applications/xihe-new/secret.yaml
@@ -284,4 +284,7 @@ spec:
     BIGMODEL_GLM:
       path: secrets/data/mindspore/xihe-new
       key: BIGMODEL_GLM
+    BIGMODEL_LLAMA:
+      path: secrets/data/mindspore/xihe-new
+      key: BIGMODEL_LLAMA
 
