--- a/applications/xihe-test-v2/secret.yaml
+++ b/applications/xihe-test-v2/secret.yaml
@@ -265,6 +265,9 @@ spec:
     BIGMODEL_GLM:
       path: secrets/data/mindspore/xihe-test-v2
       key: BIGMODEL_GLM
+    BIGMODEL_LLAMA:
+      path: secrets/data/mindspore/xihe-test-v2
+      key: BIGMODEL_LLAMA
 
 ---
 apiVersion: secrets-manager.tuenti.io/v1alpha1
