--- a/applications/xihe-new/xihe-server/deployment.yaml
+++ b/applications/xihe-new/xihe-server/deployment.yaml
@@ -353,6 +353,11 @@ spec:
             secretKeyRef:
               key: KEY_PAIR
               name: xihe-secret
+        - name: BIGMODEL_GLM
+          valueFrom:
+            secretKeyRef:
+              key: BIGMODEL_GLM
+              name: xihe-secret
         - name: ENCRYPTION_KEY_GITLAB_TOKEN
           valueFrom:
             secretKeyRef:
