--- a/applications/xihe-new/secret.yaml
+++ b/applications/xihe-new/secret.yaml
@@ -281,4 +281,7 @@ spec:
     BIGMODEL_BAICHUAN:
       path: secrets/data/mindspore/xihe-new
       key: BIGMODEL_BAICHUAN
+    BIGMODEL_GLM:
+      path: secrets/data/mindspore/xihe-new
+      key: BIGMODEL_GLM
 
