--- a/applications/xihe-new/async-server/configmap.yaml
+++ b/applications/xihe-new/async-server/configmap.yaml
@@ -43,6 +43,7 @@ data:
         ai_detector: "${BIGMODEL_AI_DETECTOR}"
         wukong_user: "${BIGMODEL_WUKONG_USER}"
         baichuan: "${BIGMODEL_BAICHUAN}"
+        glm: "${BIGMODEL_GLM}"
 
       obs:
         endpoint: "${VQA_OBS_ENDPOINT}"
@@ -83,17 +84,20 @@ data:
           name: "inference_async_start"
           topic: "xihe_inference_async_start_new"
         inference_async_finish:
-          name: "inference_async_finish"
+          name: "try_modelzoo"
           topic: "xihe_inference_async_finish_new"
         picture_publicized:
-          name: "picture_publicized"
+          name: "publicize_wukong_picture"
           topic: "xihe_picture_publicized_new"
         picture_liked:
-          name: "picture_liked"
+          name: "like_ai_picture"
           topic: "xihe_picture_liked_new"
-        bigmodel_access_log:
-          name: "bigmodel_access_log"
-          topic: "xihe_bigmodel_access_log_new"
+        bigmodel_started:
+          name: "start_modelzoo"
+          topic: "xihe_bigmodel_started_new"
+        bigmodel_finished:
+          name: "try_modelzoo"
+          topic: "xihe_bigmodel_finished_new"
 
     mq:
       address: "${KAFKA_ADDRESS}"
