--- a/applications/robot-gitee/sync-repository-trigger/kustomization.yaml
+++ b/applications/robot-gitee/sync-repository-trigger/kustomization.yaml
@@ -9,4 +9,4 @@ nameSuffix: -sync-repository-trigger
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/sync-repository-trigger
-  newTag: main-402c06
+  newTag: main-f77242c
