--- a/applications/xihe-test-v2/aicc-finetune/configmap.yaml
+++ b/applications/xihe-test-v2/aicc-finetune/configmap.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: configmap
+  name: aicc-finetune-configmap
+  namespace: xihe-test-v2
 data:
   config.yaml: |
     watch:
