--- a/applications/xihe-test-v2/kustomization.yaml
+++ b/applications/xihe-test-v2/kustomization.yaml
@@ -17,6 +17,7 @@ resources:
 - finetune
 - async-server
 - xihe-forward
+- aicc-finetune
 namespace: xihe-test-v2
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
