update message-server aiccfinetune

--- a/applications/xihe-test-v2/message-server/configmap.yaml
+++ b/applications/xihe-test-v2/message-server/configmap.yaml
@@ -41,6 +41,7 @@ data:
         api_info: api_info
         points_task: points_task
         user_points: user_points
+        aicc_finetune: aicc_finuetune
 
     postgresql:
       db:
@@ -157,6 +158,7 @@ data:
       download: "xihe_download_test"
       evaluate: "xihe_evaluate_test"
       training: "xihe_training_test"
+      aiccfinetune: "xihe_aiccfinetune_test"
       finetune: "xihe_finetune_test"
       inference: "xihe_inference_test"
       following: "xihe_following_test"
@@ -189,6 +191,7 @@ data:
         user_signed_up: "xihe_sign_up_test"
         following_added: "xihe_following_add_test"
         following_removed: "xihe_following_remove_test"
+      aicc_finetune_created: "aicc_finetune_created_test"
 
     evaluate:
       endpoint: "${INFERENCE_EVALUATE_ENDPOINT}"
@@ -205,3 +208,6 @@ data:
 
     training:
       training_endpoint: "${TRAINING_ENDPOINT}"
+
+    aiccfinetune:
+      aiccfinetune_endpoint: "${AICC_FINETUNE_ENDPOINT}"
