--- a/applications/xihe-test-v2/sync-repo/kustomization.yaml
+++ b/applications/xihe-test-v2/sync-repo/kustomization.yaml
@@ -11,4 +11,4 @@ images:
   newTag: main-411716
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/robot-gitlab-sync-repo
-  newTag: kfk2-8a42d0
+  newTag: dev-c435b2
