--- a/applications/xihe-test-v2/finetune/kustomization.yaml
+++ b/applications/xihe-test-v2/finetune/kustomization.yaml
@@ -10,4 +10,4 @@ nameSuffix: -finetune
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-finetune
-  newTag: dev-8ed384
+  newTag: dev-fc2902
