--- a/applications/xihe-test-v2/big-model-finetune/big-model-finetune-secret.yaml
+++ b/applications/xihe-test-v2/big-model-finetune/big-model-finetune-secret.yaml
@@ -11,4 +11,7 @@ spec:
     config_yaml:
       key: big_model_finetune_config_yaml
       path: secrets/data/mindspore/xihe-test-v2
+    asset_yaml:
+      key: big_model_finetune_asset_yaml
+      path: secrets/data/mindspore/xihe-test-v2
   name: big-model-finetune-secret
