--- a/applications/xihe-test-v2/secret.yaml
+++ b/applications/xihe-test-v2/secret.yaml
@@ -268,6 +268,21 @@ spec:
     BIGMODEL_LLAMA:
       path: secrets/data/mindspore/xihe-test-v2
       key: BIGMODEL_LLAMA
+    AICC_OBS_ENDPOINT:
+      path: secrets/data/mindspore/xihe-test-v2
+      key: AICC_OBS_ENDPOINT
+    AICC_OBS_AK:
+      path: secrets/data/mindspore/xihe-test-v2
+      key: AICC_OBS_AK
+    AICC_OBS_SK:
+      path: secrets/data/mindspore/xihe-test-v2
+      key: AICC_OBS_SK
+    AICC_FINETUNE_ENDPOINT:
+      path: secrets/data/mindspore/xihe-test-v2
+      key: AICC_FINETUNE_ENDPOINT
+    AICC_FINETUNE_BUCKET:
+      path: secrets/data/mindspore/xihe-test-v2
+      key: AICC_FINETUNE_BUCKET
 
 ---
 apiVersion: secrets-manager.tuenti.io/v1alpha1
