--- a/applications/xihe-test-v2/big-model-finetune/big-model-finetune-deployment.yaml
+++ b/applications/xihe-test-v2/big-model-finetune/big-model-finetune-deployment.yaml
@@ -56,6 +56,9 @@ spec:
         - mountPath: /bigmodel-finetune/conf/config.yaml
           subPath: config_yaml
           name: big-model-finetune-secret
+        - mountPath: /bigmodel-finetune/conf/asset.yml
+          subPath: asset_yaml
+          name: big-model-finetune-secret
       volumes:
       - name: big-model-finetune-secret
         secret:
