--- a/applications/xihe-test-v2/async-server/kustomization.yaml
+++ b/applications/xihe-test-v2/async-server/kustomization.yaml
@@ -5,7 +5,7 @@ images:
 kind: Kustomization
 commonAnnotations:
   kubernetes.ops.cluster: mindspore-cn4-x86
-  kubernetes.ops.email: victorzhoux@163.com
+  kubernetes.ops.email: ""
   kubernetes.ops.os.base: alpine
   kubernetes.ops.owner: zhouzixian
   kubernetes.ops.region: hk
@@ -13,4 +13,3 @@ namespace: xihe-test-v2
 resources:
 - ingress.yaml
 - deployment.yaml
-- configmap.yaml
