--- a/applications/xihe-test-v2/message-server/deployment.yaml
+++ b/applications/xihe-test-v2/message-server/deployment.yaml
@@ -6,91 +6,36 @@ metadata:
 spec:
   replicas: 1
   template:
+    metadata:
+      annotations:
+        vault.hashicorp.com/agent-inject: "true"
+        vault.hashicorp.com/agent-inject-perms-application.yml: "0700"
+        vault.hashicorp.com/agent-inject-perms-ca.crt: "0700"
+        vault.hashicorp.com/agent-run-as-user: "5000"
+        vault.hashicorp.com/agent-inject-secret-application.yml: "internal/data/mindspore/xihe-test-v2"
+        vault.hashicorp.com/agent-inject-template-application.yml: |
+          {{- with secret "internal/data/mindspore/xihe-test-v2" -}}
+          {{ .Data.data.messageServer }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-ca.crt: "internal/data/mindspore/xihe-test-v2"
+        vault.hashicorp.com/agent-inject-template-ca.crt: |
+          {{- with secret "internal/data/mindspore/xihe-test-v2" -}}
+          {{ .Data.data.MongoCA }}
+          {{- end }}
+        vault.hashicorp.com/agent-pre-populate-only: "true"
+        vault.hashicorp.com/role: xihe-test
     spec:
+      serviceAccount: xihe-test
+      imagePullSecrets:
+      - name: huawei-swr-image-pull-secret
       containers:
       - name: message-server
         image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe:latest
         imagePullPolicy: IfNotPresent
         args:
         - --port=8000
-        - --config-file=/opt/app/conf/config.yaml
+        - --config-file=/vault/secrets/application.yml
         - --enable_debug=true
-        env:
-        - name: MONGODB_NAME
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: MONGODB_NAME
-        - name: MONGODB_CONNECTION
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: MONGODB_CONNECTION
-        - name: MONGODB_CERT
-          valueFrom:
-            secretKeyRef:
-              key: MONGODB_CERT
-              name: xihe-secret
-        - name: KAFKA_ADDRESS
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: KAFKA_ADDRESS
-        - name: PGSQL_HOST
-          valueFrom:
-            secretKeyRef:
-              name: xihe-statistics-secret
-              key: PGSQL_HOST
-        - name: PGSQL_USER
-          valueFrom:
-            secretKeyRef:
-              name: xihe-statistics-secret
-              key: PGSQL_USER
-        - name: PGSQL_PWD
-          valueFrom:
-            secretKeyRef:
-              name: xihe-statistics-secret
-              key: PGSQL_PWD
-        - name: PGSQL_NAME
-          valueFrom:
-            secretKeyRef:
-              name: xihe-statistics-secret
-              key: PGSQL_NAME
-        - name: PGSQL_PORT
-          valueFrom:
-            secretKeyRef:
-              name: xihe-statistics-secret
-              key: PGSQL_PORT
-        - name: INFERENCE_EVALUATE_ENDPOINT
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: INFERENCE_EVALUATE_ENDPOINT
-        - name: TRAINING_ENDPOINT
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: TRAINING_ENDPOINT
-        - name: FINETUNE_ENDPOINT
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: FINETUNE_ENDPOINT
-        - name: REDIS_ADDRESS
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: REDIS_ADDRESS
-        - name: REDIS_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: REDIS_PASSWORD
-        - name: KEY_PAIR
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: KEY_PAIR
         resources:
           requests:
             cpu: 1000m
@@ -102,16 +47,3 @@ spec:
         - containerPort: 8000
           name: http
           protocol: TCP
-        volumeMounts:
-        - mountPath: /opt/app/conf
-          name: config
-        - mountPath: /opt/mongo/ca.crt
-          name: secret
-          subPath: ca-cert
-      volumes:
-      - name: config
-        configMap:
-          name: configmap-message-server
-      - name: secret
-        secret:
-          secretName: xihe-secret
