--- a/applications/xihe-test-v2/sync-repo/deployment.yaml
+++ b/applications/xihe-test-v2/sync-repo/deployment.yaml
@@ -6,13 +6,34 @@ metadata:
 spec:
   replicas: 1
   template:
+    metadata:
+      annotations:
+        vault.hashicorp.com/agent-inject: "true"
+        vault.hashicorp.com/agent-inject-perms-application.yml: "0700"
+        vault.hashicorp.com/agent-inject-perms-kafka: "0700"
+        vault.hashicorp.com/agent-run-as-user: "5000"
+        vault.hashicorp.com/agent-inject-secret-application.yml: "internal/data/mindspore/xihe-test-v2"
+        vault.hashicorp.com/agent-inject-template-application.yml: |
+          {{- with secret "internal/data/mindspore/xihe-test-v2" -}}
+          {{ .Data.data.syncrepo }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-kafka: "internal/data/mindspore/xihe-test-v2"
+        vault.hashicorp.com/agent-inject-template-kafka: |
+          {{- with secret "internal/data/mindspore/xihe-test-v2" -}}
+          {{ .Data.data.kafka }}
+          {{- end }}
+        vault.hashicorp.com/agent-pre-populate-only: "true"
+        vault.hashicorp.com/role: xihe-test
     spec:
+      serviceAccount: xihe-test
+      imagePullSecrets:
+      - name: huawei-swr-image-pull-secret
       containers:
       - name: sync-repo
         args:
         - --port=8000
-        - --config-file=/app/conf/xihe-gitlab/app_config/config.yaml
-        - --kafkamq-config-file=/app/conf/xihe-gitlab/kafka
+        - --config-file=/vault/secrets/application.yml
+        - --kafkamq-config-file=/vault/secrets/kafka
         - --enable_debug=true
         image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe:latest
         imagePullPolicy: IfNotPresent
@@ -20,73 +41,3 @@ spec:
         - containerPort: 8000
           name: http
           protocol: TCP
-        volumeMounts:
-        - mountPath: /app/conf/xihe-gitlab/kafka
-          subPath: KAFKA_ADDRESS
-          name: secret-volume
-        - mountPath: /app/conf/xihe-gitlab/app_config/
-          name: app-config
-          readOnly: true
-        env:
-        - name: ACCESS_HMAC
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: SYSTEMHOOK_HMAC
-        - name: HW_OBS_AK
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: HW_OBS_AK
-        - name: HW_OBS_SK
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: HW_OBS_SK
-        - name: HW_OBS_ENDPOINT
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: HW_OBS_ENDPOINT
-        - name: HW_OBS_BUCKET
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: HW_OBS_BUCKET
-        - name: MYSQL_CONN
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: MYSQL_CONN
-        - name: GITLAB_TOKEN
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: GITLAB_TOKEN
-        - name: GITLAB_INNER_HOST
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: GITLAB_INNER_HOST
-        - name: REDIS_ADDRESS
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: REDIS_ADDRESS
-        - name: REDIS_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: REDIS_PASSWORD
-        - name: KEY_PAIR
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: KEY_PAIR
-      volumes:
-      - name: app-config
-        configMap:
-          name: configmap-sync-repo
-      - name: secret-volume
-        secret:
-          secretName: xihe-secret
