--- a/applications/website/console.yaml
+++ b/applications/website/console.yaml
@@ -38,6 +38,25 @@ spec:
   type: ClusterIP
 
 ---
+apiVersion: secrets-manager.tuenti.io/v1alpha1
+kind: SecretDefinition
+metadata:
+  name: website-secrets
+  namespace: website
+spec:
+  keysMap:
+    mysql_password:
+      key: mysql_password
+      path: secrets/data/mindspore/website-secrets
+    mysql_username:
+      key: mysql_username
+      path: secrets/data/mindspore/website-secrets
+    mysql_url:
+      key: mysql_url
+      path: secrets/data/mindspore/website-secrets
+  name: website-secrets
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -67,7 +86,10 @@ spec:
           protocol: TCP
         env:
         - name: MS_MYSQL_URL
-          value: jdbc:mysql://192.168.0.193:3306/website?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true
+          valueFrom:
+            secretKeyRef:
+              key: mysql_url
+              name: website-secrets
         - name: MS_MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
