--- a/applications/xihe-test-v2/xihe-website/configmap.yaml
+++ b/applications/xihe-test-v2/xihe-website/configmap.yaml
@@ -73,6 +73,10 @@ data:
       location /obs-xihe-avatar/ {
         proxy_pass https://obs-xihe-beijing4.obs.cn-north-4.myhuaweicloud.com/;
       }
+
+      location /api-dsapi/ {
+        proxy_pass https://dsapi.osinfra.cn/;
+      }
       error_page 500 501 502 503 504 505 /500.html;
       error_page 401 /401.html;
       error_page 404 /404.html;
