--- a/applications/xihe-new/hook-delivery/kustomization.yaml
+++ b/applications/xihe-new/hook-delivery/kustomization.yaml
@@ -9,4 +9,4 @@ nameSuffix: -hook-delivery
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-gitlab-hook-delivery
-  newTag: main-064120
+  newTag: main-bc0268
