--- a/applications/xihe-new/big-model-finetune/big-model-finetune-deployment.yaml
+++ b/applications/xihe-new/big-model-finetune/big-model-finetune-deployment.yaml
@@ -14,9 +14,30 @@ spec:
     type: RollingUpdate
   template:
     metadata:
+      annotations:
+        vault.hashicorp.com/agent-inject: "true"
+        vault.hashicorp.com/secret-volume-path: "/bigmodel-finetune/conf/"
+        vault.hashicorp.com/agent-inject-perms-finetune_basic.yml: "0700"
+        vault.hashicorp.com/agent-inject-perms-asset.yml: "0700"
+        vault.hashicorp.com/agent-run-as-user: "5000"
+        vault.hashicorp.com/agent-inject-secret-finetune_basic.yml: "internal/data/mindspore/xihe-new"
+        vault.hashicorp.com/agent-inject-template-finetune_basic.yml: |
+          {{- with secret "internal/data/mindspore/xihe-new" -}}
+          {{ .Data.data.finetuneBasic }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-asset.yml: "internal/data/mindspore/xihe-new"
+        vault.hashicorp.com/agent-inject-template-asset.yml: |
+          {{- with secret "internal/data/mindspore/xihe-new" -}}
+          {{ .Data.data.finetuneAsset }}
+          {{- end }}
+        vault.hashicorp.com/agent-pre-populate-only: "true"
+        vault.hashicorp.com/role: xihe-new
       labels:
         app: big-model-finetune
     spec:
+      serviceAccount: xihe-new
+      imagePullSecrets:
+      - name: huawei-swr-image-pull-secret
       containers:
       - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/big-model-finetune:c409315983b32f9ea44dae3c51e2a54123a5673e
         imagePullPolicy: IfNotPresent
@@ -25,23 +46,20 @@ spec:
           httpGet:
             path: /health
             port: 8080
-          initialDelaySeconds: 20
+          initialDelaySeconds: 100
           periodSeconds: 10
           successThreshold: 1
           timeoutSeconds: 5
         name: big-model-finetune
         env:
         - name: CPU_COUNT
-          valueFrom:
-            secretKeyRef:
-              key: big_model_finetune_cpu_count
-              name: big-model-finetune-secret
+          value: "4"
         readinessProbe:
           failureThreshold: 3
           httpGet:
             path: /health
             port: 8080
-          initialDelaySeconds: 10
+          initialDelaySeconds: 100
           periodSeconds: 10
           successThreshold: 1
           timeoutSeconds: 5
