--- a/applications/xihe-new/finetune/deployment.yaml
+++ b/applications/xihe-new/finetune/deployment.yaml
@@ -6,12 +6,27 @@ metadata:
 spec:
   replicas: 1
   template:
+    metadata:
+      annotations:
+        vault.hashicorp.com/agent-inject: "true"
+        vault.hashicorp.com/agent-inject-perms-application.yml: "0700"
+        vault.hashicorp.com/agent-run-as-user: "5000"
+        vault.hashicorp.com/agent-inject-secret-application.yml: "internal/data/mindspore/xihe-new"
+        vault.hashicorp.com/agent-inject-template-application.yml: |
+          {{- with secret "internal/data/mindspore/xihe-new" -}}
+          {{ .Data.data.finetune }}
+          {{- end }}
+        vault.hashicorp.com/agent-pre-populate-only: "true"
+        vault.hashicorp.com/role: xihe-new
     spec:
+      serviceAccount: xihe-new
+      imagePullSecrets:
+      - name: huawei-swr-image-pull-secret
       containers:
       - name: finetune
         args:
         - --port=8000
-        - --config-file=/app/conf/app_config/config.yaml
+        - --config-file=/vault/secrets/application.yml
         - --enable_debug=true
         image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe:latest
         imagePullPolicy: IfNotPresent
@@ -19,22 +34,3 @@ spec:
         - containerPort: 8000
           name: http
           protocol: TCP
-        volumeMounts:
-        - mountPath: /app/conf/app_config/
-          name: app-config
-          readOnly: true
-        env:
-        - name: FINETUNE_USERNAME
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: FINETUNE_USERNAME
-        - name: FINETUNE_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: FINETUNE_PASSWORD
-      volumes:
-      - name: app-config
-        configMap:
-          name: configmap-finetune
