--- a/applications/xihe-new/training-center-huaweicloud/deployment.yaml
+++ b/applications/xihe-new/training-center-huaweicloud/deployment.yaml
@@ -6,12 +6,27 @@ metadata:
 spec:
   replicas: 1
   template:
+    metadata:
+      annotations:
+        vault.hashicorp.com/agent-inject: "true"
+        vault.hashicorp.com/agent-inject-perms-application.yml: "0700"
+        vault.hashicorp.com/agent-run-as-user: "5000"
+        vault.hashicorp.com/agent-inject-secret-application.yml: "internal/data/mindspore/xihe-new"
+        vault.hashicorp.com/agent-inject-template-application.yml: |
+          {{- with secret "internal/data/mindspore/xihe-new" -}}
+          {{ .Data.data.training }}
+          {{- end }}
+        vault.hashicorp.com/agent-pre-populate-only: "true"
+        vault.hashicorp.com/role: xihe-new
     spec:
+      serviceAccount: xihe-new
+      imagePullSecrets:
+      - name: huawei-swr-image-pull-secret
       containers:
       - name: training-center-huaweicloud
         args:
         - --port=8000
-        - --config-file=/app/conf/xihe-gitlab/app_config/config.yaml
+        - --config-file=/vault/secrets/application.yml
         - --enable_debug=true
         image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe:latest
         imagePullPolicy: IfNotPresent
@@ -19,67 +34,3 @@ spec:
         - containerPort: 8000
           name: http
           protocol: TCP
-        volumeMounts:
-        - mountPath: /app/conf/xihe-gitlab/app_config/
-          name: app-config
-          readOnly: true
-        env:
-        - name: HW_MODELARTS_REGION
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: HW_MODELARTS_REGION
-        - name: HW_MODELARTS_PROJECT_NAME
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: HW_MODELARTS_PROJECT_NAME
-        - name: HW_MODELARTS_PROJECT_ID
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: HW_MODELARTS_PROJECT_ID
-        - name: HW_MODELARTS_ENDPOINT
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: HW_MODELARTS_ENDPOINT
-        - name: HW_OBS_AK
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: HW_OBS_AK
-        - name: HW_OBS_SK
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: HW_OBS_SK
-        - name: HW_OBS_ENDPOINT
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: HW_OBS_ENDPOINT
-        - name: HW_OBS_BUCKET
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: HW_OBS_BUCKET
-        - name: MYSQL_CONN
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: MYSQL_CONN
-        - name: GITLAB_TOKEN
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: GITLAB_TOKEN
-        - name: GITLAB_HOST
-          valueFrom:
-            secretKeyRef:
-              name: xihe-secret
-              key: GITLAB_HOST
-      volumes:
-      - name: app-config
-        configMap:
-          name: configmap-training-center-huaweicloud
