--- a/applications/xihe-new/finetune/kustomization.yaml
+++ b/applications/xihe-new/finetune/kustomization.yaml
@@ -9,4 +9,4 @@ nameSuffix: -finetune
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-finetune
-  newTag: main-268926
+  newTag: main-0cff60
