--- a/applications/xihe-new/inference-evaluate/kustomization.yaml
+++ b/applications/xihe-new/inference-evaluate/kustomization.yaml
@@ -11,4 +11,4 @@ images:
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-inference-evaluate
   newTag: main-be2103
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-inference-evaluate
-  newTag: main-6388d5
+  newTag: main-889798
