--- a/applications/xihe-new/sync-repo/kustomization.yaml
+++ b/applications/xihe-new/sync-repo/kustomization.yaml
@@ -10,4 +10,4 @@ nameSuffix: -sync-repo
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-sync-repo
-  newTag: dev-ac7472
+  newTag: main-78a298
