--- a/applications/xihe-test-v2/sync-repo/deployment.yaml
+++ b/applications/xihe-test-v2/sync-repo/deployment.yaml
@@ -11,6 +11,7 @@ spec:
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/agent-inject-perms-application.yml: "0700"
         vault.hashicorp.com/agent-inject-perms-kafka: "0700"
+        vault.hashicorp.com/agent-inject-perms-redis.crt: "0700"
         vault.hashicorp.com/agent-run-as-user: "5000"
         vault.hashicorp.com/agent-inject-secret-application.yml: "internal/data/mindspore/xihe-test-v2"
         vault.hashicorp.com/agent-inject-template-application.yml: |
@@ -21,6 +22,11 @@ spec:
         vault.hashicorp.com/agent-inject-template-kafka: |
           {{- with secret "internal/data/mindspore/xihe-test-v2" -}}
           {{ .Data.data.kafka }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-redis.crt: "internal/data/mindspore/xihe-test-v2"
+        vault.hashicorp.com/agent-inject-template-redis.crt: |
+          {{- with secret "internal/data/mindspore/xihe-test-v2" -}}
+          {{ .Data.data.RedisCA }}
           {{- end }}
         vault.hashicorp.com/agent-pre-populate-only: "true"
         vault.hashicorp.com/role: xihe-test
