--- a/applications/xihe-test-v2/finetune/kustomization.yaml
+++ b/applications/xihe-test-v2/finetune/kustomization.yaml
@@ -9,4 +9,4 @@ nameSuffix: -finetune
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-finetune
-  newTag: dev-83478d
+  newTag: c-dev-98b9e4
